...
    android:paddingTop="@dimen/margin_4"
    android:paddingBottom="@dimen/margin_4"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <FrameLayout
        android:id="@+id/optionsViewCamera"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true">
        <ImageView
...
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/ic_image"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/optionsViewGif"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true">
        <ImageView
...
