...
            app:ckPermissions="strict"
            app:ckVideoQuality="max720p"
            app:ckPinchToZoom="true"
            app:ckDoubleTapToToggleFacing="true"/>

        <Button
            android:id="@+id/cameraCaptureButton"
            android:layout_width="@dimen/margin_72"
            android:layout_height="@dimen/margin_72"
            android:layout_gravity="center"
            android:background="@drawable/shape_circle_camera_capture"
            android:clickable="true"
            android:focusable="true"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".95" />

        <Button
            android:id="@+id/cameraFacingDirectionButton"
            android:layout_width="@dimen/margin_36"
            android:layout_height="@dimen/margin_36"
            android:background="@drawable/ic_switch_camera"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@id/cameraCaptureButton"
...
