...
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/inputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:hint="Type a message..."
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLines="4"
                    android:padding="@dimen/margin_24" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/sendButton"
                android:layout_width="@dimen/input_filed_send_button_size"
                android:layout_height="@dimen/input_filed_send_button_size"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_8"
                android:background="@drawable/shape_circle_btn"
                android:clickable="true"
...
